################################################################################
#
# Change log of IntaRNA available at 
#
# https://github.com/BackofenLab/IntaRNA
#
################################################################################

development version

#######  new features #######

+ outNoLP
+ outCsvSort
+ output of all putative seeds (unless outMode=N or outBestSeedOnly)
+ personality
+ model=P
+ support for multi-precision Z (via GNU quadmath library) : configure
+ mode=S
+ energyNoDangles
+ parameterFile
+ seed-extension-based prediction
+ seedNoGU
+ seedMaxEhybrid
+ helixMinPu (replaces helixMaxED)
+ helixFullE : replaces helixNoED
+ model=B (replaces L)
* reporting best (mfe) seed per interaction
* outMode=C
  + sorting
  + columns Eall, Zall, P_E
  * marker "NAN" for not available values
* outMode=D
  * index ranges without whitespaces, i.e. "1--5" instead of "1 -- 5"
  + highlighting of all bps part of putative seeds
* E_type now int (was float)
- IntaRNA v1 output support not continued

###############################

190716 Martin Raden :
 * IntaRNA/Accessibility :
   * decomposeByMaxED( ranges ) : 
     + additional parameter for minimal range length
 * bin/CommandLineParsing :
   - high memory warning disabled
   + set seedBP for minimal range length of range decomposition
 * IntaRNA/IndexRange :
   * overlappingWindows :
     * bugfix: check for non-ascending was not using "!isAscending()"

190607 Martin Raden :
 * IntaRNA/general :
   * deleteOutputStream() :
     - no warning if not a file stream (to support temporary stringstreams)
 * IntaRNA/OutputHandlerCsv :
   + colTypeNumericSort : list of types that need numerical sorting
   * notAvailable : now "NAN" (was "NA")
   - colOrder : renamed to columns
   + columns (former colOrder)
 + IntaRNA/OutputStreamHandler : generic handler to wrap the output stream
 + IntaRNA/OutputStreamHandlerSortedCsv : OSH that stores output in temporary